FirstGitProj/src/objects/Region_New__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Service_Email__c</fullName>
        <label>Customer Service Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dummy_Number__c</fullName>
        <label>Dummy Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Email__c</fullName>
        <label>PC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>AllRegions</fullName>
        <columns>NAME</columns>
        <columns>Region_Code__c</columns>
        <columns>Customer_Service_Email__c</columns>
        <columns>PC_Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Regions</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>